--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
         {
-            "src": "ex7_sphinx_auth/main.py",
+            "src": "HW5/main.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "ex7_sphinx_auth/main.py"
+            "dest": "HW5/main.py"
         }
     ]
 }  
