--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,10 @@
 {
+    "version": 2,
     "builds": [
-        {
-            "src": "HW5/main.py",
-            "use": "@vercel/python"
-        }
+      { "src": "main.py", "use": "@vercel/python" }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "HW5/main.py"
-        }
+      { "src": "/(.*)", "dest": "main.py" }
     ]
-}  
+  }
+  
