--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "main.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "main.py" }
-    ]
-  }
-  
+  "builds": [
+      {
+          "src": "HW5/main.py",
+          "use": "@vercel/python"
+      }
+  ],
+  "routes": [
+      {
+          "src": "/(.*)",
+          "dest": "HW5/main.py"
+      }
+  ]
+}  
