--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-CLERK_SECRET_KEY=clerk_secret_key
-DOMAIN=advanced-hermit-16.accounts.dev
-CLERK_DOMAIN=advanced-hermit-16.clerk.accounts.dev
-ENVIRONMENT=development # development, production
-APP_URL_VERCEL=simple-auth-alpha.vercel.app
+CLERK_SECRET_KEY=sk_test_aPlzeHTO8K4hNCZjpP7C7yd6dRap2YFmunlIKRglMR
+DOMAIN=eager-fawn-5.accounts.dev
+CLERK_DOMAIN=eager-fawn-5.clerk.accounts.dev
+ENVIRONMENT=development
+APP_URL_VERCEL=hw-5-ob69.vercel.app
